--- a/src/components/Concerts/concerts.scss
+++ b/src/components/Concerts/concerts.scss
@@ -9,4 +9,13 @@
 
 .featured-concerts {
   margin: 4rem 0;
+
+  .concert-link{
+    color: inherit;
+
+    &:hover{
+      text-decoration: none;
+      color: purple;
+    }
+  }
 }
