--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -4,18 +4,25 @@
     padding: 4rem;
 
     .logo-area {
-        text-align: center;
-        .logo-concert {
-            color: lighten(purple, 10%);
-            font-size: 2rem;
-          }
-          .logo-party {
-            color: lighten(rgb(0, 0, 0), 10%);
-            font-size: 1.5rem;
-          }
+      text-align: center;
+      .logo-concert {
+        color: lighten(purple, 10%);
+        font-size: 2rem;
+      }
+      .logo-party {
+        color: lighten(rgb(0, 0, 0), 10%);
+        font-size: 1.5rem;
+      }
     }
-    .form-area{
-        margin-top: 2rem;
+    .form-area {
+      margin-top: 2rem;
+    }
+  }
+
+  .background-section {
+    .bg-text {
+      color: white;
+      padding: 50% 2rem 2rem 4rem;
     }
   }
 }
